--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-    <meta name="description" content="Website By Terence Edward Arnold Lewis, This is the Main landing page.">
-    <title>RMBT</title>
+    <meta name="description" content="Plan your perfect spa retreat in Lithuania. Beauty, relaxation, and peace of mind await at our handpicked resorts.">
+    <title>Lithuania Spa Retreats | RMBT</title>
 </head>
 
 <body>
@@ -49,7 +49,7 @@
     <header class="grid">
         <div class="content-wrap">
             <h2>Welcome To</h2>
-            <h2>Remember Me By Trade</h2>
+            <h2>Rest, Meditate, Breathe, Travel</h2>
         </div>
     </header>
 
@@ -58,14 +58,12 @@
         <!-- section main -->
         <section class="section-main grid">
             <div class="content-wrap">
-                <h2 class="content-title">IT & office Support Solutions</h2>
+                <h2 class="content-title">Spa & Wellness Retreats in Lithuania</h2>
                 <div>
                     <p>
-                        With many businesses continuing to work remotely or implementing a hybrid setup, access
-                        to fast IT support is a must have for employees. We have carefully designed a range of IT
-                        support packages to suit your business specific needs. Strategically designed, our three levels
-                        of flexible business
-                        support packages are designed to support all types and sizes of business.
+                        Escape to the tranquil beauty of Lithuania’s natural landscapes and experience world-class spa resorts. 
+                        Our curated retreats are designed to rejuvenate your body, calm your mind, and nourish your soul. 
+                        Whether you're seeking beauty treatments, hot mineral springs, or forest therapy, Lithuania offers the perfect sanctuary for rest and renewal.
                         <a id="services-list"></a>
                     </p>
 
@@ -79,24 +77,20 @@
                 <li>
                     <div class="card-call-center">
                         <img src="assets/images/call-center.webp"
-                            alt="People working in an office at a call center help desk.">
+                            alt="Luxury spa hotel with forest view.">
                         <div class="card1" id="content1">
-                            <h3 class="card-title">24hr Help Desk Support</h3>
-                            <p>Speed of resolution is at the forefront of our Service desk performance which is why when
-                                customers call, we answer in under 1 minute. We also focus on the quick resolution of
-                                tickets to minimise disruption to our customers.</p>
+                            <h3 class="card-title">Forest Spa Retreats</h3>
+                            <p>Experience deep relaxation in pine-covered landscapes. Enjoy saunas, massage therapy, and mindfulness in nature's lap.</p>
                         </div>
                     </div>
                 </li>
                 <li>
                     <div class="card-functional">
 
-                        <img src="assets/images/functional.webp" alt="Man working on laptop.">
+                        <img src="assets/images/functional.webp" alt="Indoor mineral pool with mood lighting.">
                         <div class="card2" id="content2">
-                            <h3 class="card-title">Functional Testing</h3>
-                            <p>The main goal of functional testing is to check how closely the feature is working as per
-                                the specifications. For better understanding, we can divide functional testing goals
-                                into two parts: validation testing and defect testing.</p>
+                            <h3 class="card-title">Thermal & Mineral Baths.</h3>
+                            <p>Soak in healing waters known for their skin-rejuvenating and detoxifying properties in top-rated Lithuanian spas.</p>
                         </div>
                     </div>
                 </li>
@@ -104,12 +98,10 @@
                     <div class="card-non-functional">
 
                         <img src="assets/images/non.webp"
-                            alt="Wonen standing in front of tower system servers working on laptop">
+                            alt="Woman receiving facial treatment">
                         <div class="card3" id="content3">
-                            <h3 class="card-title">Non-Functional Testing</h3>
-                            <p>Non-functional testing helps us identify the risks a product foresees and tells us if it
-                                has poor performance in product or poor performance in production environments these
-                                tests are done in order to obtain information.</p>
+                            <h3 class="card-title">Beauty & Skincare</h3>
+                            <p>From facials to holistic skin treatments using Baltic herbs, recharge your glow with our expert beauty packages.</p>
 
                         </div>
 
@@ -154,8 +146,8 @@
         </section>
 
         <div class="iframe">
-            <iframe title="Are location"
-                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d19849.47908896918!2d-0.19988479999999997!3d51.5465087!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2suk!4v1653596934333!5m2!1sen!2suk"
+            <iframe title="Spa Location in Lithuania"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2290.6181539059933!2d23.3165164!3d54.9015686!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e722f400da0bcb%3A0xe50900de73b5f80b!2sVytautas%20Mineral%20Spa!5e0!3m2!1sen!2slt!4v1718551863806!5m2!1sen!2slt"
                 allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </main>
@@ -163,8 +155,8 @@
     <footer>
         <!--CONTACT INFO-->
         <div class="contact-info">
-            <p><i class="fas fa-mobile-alt"></i> +44 (0) 208-never-going-to-get-it</p>
-            <p><i class="far fa-envelope"></i>RMBT@gmail.test</p>
+            <p><i class="fas fa-mobile-alt"></i>Call or WhatsApp us on: +44 1234 567890</p>
+            <p><i class="far fa-envelope"></i>Email: bookings@rmbttravel.test</p>
         </div>
         <!--SOCIAL MEDIA LINKS-->
         <ul class="social-networks">
