--- a/index.html
+++ b/index.html
@@ -138,9 +138,8 @@
             <div class="box">
                 <h2 class="content-title">Contact Us</h2>
                 <p>
-                    Please feel free to get in touch using our contact form or call us on +44 (0)
-                    208-never-going-to-get-it or by email at
-                    rmbt@gmail.test or get us on our social media links at the bottom of are page.
+                    Please feel free to get in touch using our contact form or call us onCall or WhatsApp us on: +44 1234 567890 or by email at
+                    bookings@rmbttravel.test or get us on our social media links at the bottom of are page.
                 </p>
             </div>
         </section>
