--- a/index.html
+++ b/index.html
@@ -113,15 +113,12 @@
         <!-- Needs section-->
         <section id="section-needs" class="grid">
             <div class="content-wrap">
-                <h2 class="content-title">We manage all your IT needs</h2>
+                <h2 class="content-title">We Handle Everything — So You Can Just Breathe</h2>
                 <p>
-                    Whether you require
-                    fully outsourced business IT support or want to bolster the capabilities of
-                    your internal IT Support team Our specialist service desk can deliver expert, fast and reliable
-                    IT Support services tailored to your business requirements.
-                    Its not by chance, that for the past 3 years we have consistently been awarded for delivering
-                    customer service excellence by Feefo. Our commitment to customer service has been reflected in the
-                    quality and efficiency of our work.
+                    Whether you're planning a weekend escape or a week-long healing journey, we take care of every detail — from finding the perfect Lithuanian spa resort to arranging transfers, treatments, and tranquil moments. 
+                    Our team specializes in crafting restful experiences that nourish the body and calm the mind. 
+                    <br><br> For the past three years, we've built a reputation for personalized service and peaceful getaways that leave lasting memories. 
+                    Because true relaxation should begin the moment you decide to travel — not after the flight.
                 </p>
             </div>
         </section>
