--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <p>
                         Escape to the tranquil beauty of Lithuania’s natural landscapes and experience world-class spa resorts. 
                         Our curated retreats are designed to rejuvenate your body, calm your mind, and nourish your soul. 
-                        Whether you're seeking beauty treatments, hot mineral springs, or forest therapy, Lithuania offers the perfect sanctuary for rest and renewal.
+                        Whether you're seeking beauty treatments, hot mineral spar, or forest therapy, Lithuania offers the perfect sanctuary for rest and renewal.
                         <a id="services-list"></a>
                     </p>
 
@@ -115,9 +115,9 @@
             <div class="content-wrap">
                 <h2 class="content-title">We Handle Everything — So You Can Just Breathe</h2>
                 <p>
-                    Whether you're planning a weekend escape or a week-long healing journey, we take care of every detail — from finding the perfect Lithuanian spa resort to arranging transfers, treatments, and tranquil moments. 
-                    Our team specializes in crafting restful experiences that nourish the body and calm the mind. 
-                    <br><br> For the past three years, we've built a reputation for personalized service and peaceful getaways that leave lasting memories. 
+                    Whether you're planning a weekend escape or a week-long healing journey, we take care of every detail — from finding the perfect Lithuanian spa resort to arranging treatments, and tranquil moments. 
+                    We specializes in crafting restful experiences that nourish the body and calm the mind. 
+                    <br><br> For the past two years, I have travelled extensively to some of the most beautiful and peaceful getaways that leave lasting memories. 
                     Because true relaxation should begin the moment you decide to travel — not after the flight.
                 </p>
             </div>
@@ -126,14 +126,13 @@
         <!-- Contacts section -->
         <section id="section-contacts" class="grid">
             <div class="box">
-                <h2 class="content-title">About US</h2>
+                <h2 class="content-title">About RMBT</h2>
                 <p>
-                    RMBT London are one of the 200 managed Microsoft Gold Partners in the UK and renowned as one of the
-                    largest Managed Service Providers in London.
+                    RMBT London is here to give you the best chance of finding your perfect dectnation for your getaway using us as a service provider locator.
                 </p>
             </div>
             <div class="box">
-                <h2 class="content-title">Contact Us</h2>
+                <h2 class="content-title">Contact RMBT</h2>
                 <p>
                     Please feel free to get in touch using our contact form or call us onCall or WhatsApp us on: +44 1234 567890 or by email at
                     bookings@rmbttravel.test or get us on our social media links at the bottom of are page.
