--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <nav class="navigation">
             <ul>
                 <li><a href="#top">Home</a></li>
-                <li><a href="#services-list">Services </a></li>
-                <li><a href="#section-needs">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#services-list">Gallery</a></li>
+                <li><a href="#section-needs">Retreat Info</a></li>
+                <li><a href="contact.html">Book Now</a></li>
             </ul>
         </nav>
         <label for="nav-toggle" class="nav-toggle-label">
