--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
 
         <div class="iframe">
             <iframe title="Spa Location in Lithuania"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47625.94403825245!2d20.97958219178441!3d55.91731003113163!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e4f27dc95f91cd%3A0x400d18c840bd4c0!2sPalanga%2C%20Lithuania!5e0!3m2!1sen!2suk!4v1721318972097!5m2!1sen!2suk"
-        </div>
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47625.94403825245!2d20.97958219178441!3d55.91731003113163!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e4f27dc95f91cd%3A0x400d18c840bd4c0!2sPalanga%2C%20Lithuania!5e0!3m2!1sen!2suk!4v1721318972097!5m2!1sen!2suk"</iframe>
+                </div>
     </main>
 
     <footer>
