--- a/index.html
+++ b/index.html
@@ -2,158 +2,187 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#ffffff" />
-  <meta name="description"
-    content="Plan your perfect spa retreat in Lithuania. Beauty, relaxation, and peace of mind await at our handpicked resorts." />
-  <title>Lithuania Spa Retreats | RMBT</title>
-
-  <!-- Styles -->
-  <link rel="stylesheet" href="assets/css/style.css" />
-
-  <!-- Favicons -->
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-icon-180x180.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/favicon-96x96.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="apple-touch-icon" sizes="57x57" href="assets/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="assets/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="assets/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="assets/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="assets/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="assets/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <meta name="description" content="Website By Terence Edward Arnold Lewis, This is the Main landing page.">
+    <title>RMBT</title>
 </head>
 
 <body>
 
-  <!-- Navbar -->
-  <header class="section-nav">
-    <h1 class="logo">RMBT</h1>
-    <input type="checkbox" class="nav-toggle" id="nav-toggle" />
-    <nav class="navigation">
-      <ul>
-        <li><a href="#top">Home</a></li>
-        <li><a href="#services-list">Gallery</a></li>
-        <li><a href="#section-needs">Retreat Info</a></li>
-        <li><a href="contact.html">Book Now</a></li>
-      </ul>
-    </nav>
-    <label for="nav-toggle" class="nav-toggle-label">
-      <span class="button"></span>
-    </label>
-  </header>
+    <!-- Navbar -->
+    <section class="section-nav">
+        <h1 class="logo">RMBT</h1>
+        <input type="checkbox" class="nav-toggle" id="nav-toggle">
+        <nav class="navigation">
+            <ul>
+                <li><a href="#top">Home</a></li>
+                <li><a href="#services-list">Services </a></li>
+                <li><a href="#section-needs">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+        <label for="nav-toggle" class="nav-toggle-label">
+            <span class="button"></span>
+        </label>
 
-  <!-- Hero -->
-  <section class="grid hero">
-    <div class="content-wrap">
-      <h2>Welcome To</h2>
-      <h2>Rest, Meditate, Breathe, Travel</h2>
-    </div>
-  </section>
-
-  <!-- Main Content -->
-  <main class="main">
-
-    <!-- Intro Section -->
-    <section class="section-main grid">
-      <div class="content-wrap">
-        <h2 class="content-title">Spa & Wellness Retreats in Lithuania</h2>
-        <p>
-          Escape to the tranquil beauty of Lithuania’s natural landscapes and experience world-class spa resorts.
-          Our curated retreats are designed to rejuvenate your body, calm your mind, and nourish your soul.
-          Whether you're seeking beauty treatments, hot mineral spas, or forest therapy, Lithuania offers the perfect sanctuary for rest and renewal.
-        </p>
-        <a id="services-list"></a>
-      </div>
     </section>
+    <!-- Hero Section  -->
+    <header class="grid">
+        <div class="content-wrap">
+            <h2>Welcome To</h2>
+            <h2>Remember Me By Trade</h2>
+        </div>
+    </header>
 
-    <!-- Services -->
-    <section class="section-services grid">
-      <ul>
-        <li>
-          <div class="card-call-center">
-            <img src="assets/images/call-center.webp" alt="Luxury spa hotel with forest view." />
-            <div class="card1">
-              <h3 class="card-title">Forest Spa Retreats</h3>
-              <p>Experience deep relaxation in pine-covered landscapes. Enjoy saunas, massage therapy, and mindfulness in nature's lap.</p>
+    <!-- Main -->
+    <main class="main">
+        <!-- section main -->
+        <section class="section-main grid">
+            <div class="content-wrap">
+                <h2 class="content-title">IT & office Support Solutions</h2>
+                <div>
+                    <p>
+                        With many businesses continuing to work remotely or implementing a hybrid setup, access
+                        to fast IT support is a must have for employees. We have carefully designed a range of IT
+                        support packages to suit your business specific needs. Strategically designed, our three levels
+                        of flexible business
+                        support packages are designed to support all types and sizes of business.
+                        <a id="services-list"></a>
+                    </p>
+
+                </div>
             </div>
-          </div>
-        </li>
-        <li>
-          <div class="card-functional">
-            <img src="assets/images/functional.webp" alt="Indoor mineral pool with mood lighting." />
-            <div class="card2">
-              <h3 class="card-title">Thermal & Mineral Baths</h3>
-              <p>Soak in healing waters known for their skin-rejuvenating and detoxifying properties in top-rated Lithuanian spas.</p>
+        </section>
+
+        <!-- Services section -->
+        <section class="section-services grid">
+            <ul>
+                <li>
+                    <div class="card-call-center">
+                        <img src="assets/images/call-center.webp"
+                            alt="People working in an office at a call center help desk.">
+                        <div class="card1" id="content1">
+                            <h3 class="card-title">24hr Help Desk Support</h3>
+                            <p>Speed of resolution is at the forefront of our Service desk performance which is why when
+                                customers call, we answer in under 1 minute. We also focus on the quick resolution of
+                                tickets to minimise disruption to our customers.</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="card-functional">
+
+                        <img src="assets/images/functional.webp" alt="Man working on laptop.">
+                        <div class="card2" id="content2">
+                            <h3 class="card-title">Functional Testing</h3>
+                            <p>The main goal of functional testing is to check how closely the feature is working as per
+                                the specifications. For better understanding, we can divide functional testing goals
+                                into two parts: validation testing and defect testing.</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="card-non-functional">
+
+                        <img src="assets/images/non.webp"
+                            alt="Wonen standing in front of tower system servers working on laptop">
+                        <div class="card3" id="content3">
+                            <h3 class="card-title">Non-Functional Testing</h3>
+                            <p>Non-functional testing helps us identify the risks a product foresees and tells us if it
+                                has poor performance in product or poor performance in production environments these
+                                tests are done in order to obtain information.</p>
+
+                        </div>
+
+                    </div>
+                </li>
+            </ul>
+        </section>
+
+        <!-- Needs section-->
+        <section id="section-needs" class="grid">
+            <div class="content-wrap">
+                <h2 class="content-title">We manage all your IT needs</h2>
+                <p>
+                    Whether you require
+                    fully outsourced business IT support or want to bolster the capabilities of
+                    your internal IT Support team Our specialist service desk can deliver expert, fast and reliable
+                    IT Support services tailored to your business requirements.
+                    Its not by chance, that for the past 3 years we have consistently been awarded for delivering
+                    customer service excellence by Feefo. Our commitment to customer service has been reflected in the
+                    quality and efficiency of our work.
+                </p>
             </div>
-          </div>
-        </li>
-        <li>
-          <div class="card-non-functional">
-            <img src="assets/images/non.webp" alt="Woman receiving facial treatment" />
-            <div class="card3">
-              <h3 class="card-title">Beauty & Skincare</h3>
-              <p>From facials to holistic skin treatments using Baltic herbs, recharge your glow with our expert beauty packages.</p>
+        </section>
+
+        <!-- Contacts section -->
+        <section id="section-contacts" class="grid">
+            <div class="box">
+                <h2 class="content-title">About US</h2>
+                <p>
+                    RMBT London are one of the 200 managed Microsoft Gold Partners in the UK and renowned as one of the
+                    largest Managed Service Providers in London.
+                </p>
             </div>
-          </div>
-        </li>
-      </ul>
-    </section>
+            <div class="box">
+                <h2 class="content-title">Contact Us</h2>
+                <p>
+                    Please feel free to get in touch using our contact form or call us on +44 (0)
+                    208-never-going-to-get-it or by email at
+                    rmbt@gmail.test or get us on our social media links at the bottom of are page.
+                </p>
+            </div>
+        </section>
 
-    <!-- Retreat Info -->
-    <section id="section-needs" class="grid">
-      <div class="content-wrap">
-        <h2 class="content-title">We Handle Everything — So You Can Just Breathe</h2>
-        <p>
-          Whether you're planning a weekend escape or a week-long healing journey, we take care of every detail — from finding the perfect Lithuanian spa resort to arranging treatments and tranquil moments.
-          We specialize in crafting restful experiences that nourish the body and calm the mind.
-          <br /><br />
-          For the past two years, I have travelled extensively to some of the most beautiful and peaceful getaways that leave lasting memories.
-          Because true relaxation should begin the moment you decide to travel — not after the flight.
-        </p>
-      </div>
-    </section>
+        <div class="iframe">
+            <iframe title="Are location"
+                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d19849.47908896918!2d-0.19988479999999997!3d51.5465087!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2suk!4v1653596934333!5m2!1sen!2suk"
+                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </main>
 
-    <!-- About + Contact -->
-    <section id="section-contacts" class="grid">
-      <div class="box">
-        <h2 class="content-title">About RMBT</h2>
-        <p>RMBT London is here to help you discover your ideal destination using us as your spa and retreat locator.</p>
-      </div>
-      <div class="box">
-        <h2 class="content-title">Contact RMBT</h2>
-        <p>
-          Please reach out using our contact form, or call/WhatsApp us on: <strong>+44 1234 567890</strong><br />
-          Email: <strong>bookings@rmbttravel.test</strong><br />
-          Or connect with us via social media below.
-        </p>
-      </div>
-    </section>
-
-    <!-- Embedded Map -->
-    <section class="map-section">
-      <iframe
-        title="Spa Location in Lithuania"
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47625.94403825245!2d20.97958219178441!3d55.91731003113163!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e4f27dc95f91cd%3A0x400d18c840bd4c0!2sPalanga%2C%20Lithuania!5e0!3m2!1sen!2suk!4v1721318972097!5m2!1sen!2suk"
-        width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade">
-      </iframe>
-    </section>
-
-  </main>
-
-  <!-- Footer -->
-  <footer>
-    <div class="contact-info">
-      <p><i class="fas fa-mobile-alt"></i> Call or WhatsApp: +44 1234 567890</p>
-      <p><i class="far fa-envelope"></i> Email: bookings@rmbttravel.test</p>
-    </div>
-    <ul class="social-networks">
-      <li><a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a></li>
-      <li><a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Instagram"><i class="fab fa-instagram"></i></a></li>
-      <li><a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Twitter"><i class="fab fa-twitter"></i></a></li>
-    </ul>
-  </footer>
-
-  <!-- Font Awesome -->
-  <script src="https://kit.fontawesome.com/2fa864f429.js" crossorigin="anonymous"></script>
+    <footer>
+        <!--CONTACT INFO-->
+        <div class="contact-info">
+            <p><i class="fas fa-mobile-alt"></i> +44 (0) 208-never-going-to-get-it</p>
+            <p><i class="far fa-envelope"></i>RMBT@gmail.test</p>
+        </div>
+        <!--SOCIAL MEDIA LINKS-->
+        <ul class="social-networks">
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook-f"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Check us out on Instagram (opens in a new tab)"><i class="fab fa-instagram"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener"
+                    aria-label="Check us out on Twitter (opens in a new tab)"><i class="fab fa-twitter"></i></a>
+            </li>
+        </ul>
+    </footer>
+    <script src="https://kit.fontawesome.com/2fa864f429.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
-
