--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <header class="grid">
         <div class="content-wrap">
             <h2>Welcome To</h2>
-            <h2>Remember Me By Trade</h2>
+            <h2>RMBT: Rest, Meditate, Breathe, Travel</h2>
         </div>
     </header>
 
@@ -58,14 +58,14 @@
         <!-- section main -->
         <section class="section-main grid">
             <div class="content-wrap">
-                <h2 class="content-title">IT & office Support Solutions</h2>
+                <h2 class="content-title">Spa&Wellness Retreats in Lithuania</h2>
                 <div>
                     <p>
-                        With many businesses continuing to work remotely or implementing a hybrid setup, access
-                        to fast IT support is a must have for employees. We have carefully designed a range of IT
-                        support packages to suit your business specific needs. Strategically designed, our three levels
-                        of flexible business
-                        support packages are designed to support all types and sizes of business.
+                        Escape to the tranquil beauty of Lithuania's natural landscapes
+                        and experience world-class spa resorts. Our curated retreats are
+                        designed to rejuvenate your body, calm your mind, and nourish the soul.
+                        Wether you'er seeking beauty treatments, hot mineral spa's or forest therapy,
+                        Lithuania offers the perfect sanctuary for rest and renewal.
                         <a id="services-list"></a>
                     </p>
 
@@ -81,10 +81,10 @@
                         <img src="assets/images/call-center.webp"
                             alt="People working in an office at a call center help desk.">
                         <div class="card1" id="content1">
-                            <h3 class="card-title">24hr Help Desk Support</h3>
-                            <p>Speed of resolution is at the forefront of our Service desk performance which is why when
-                                customers call, we answer in under 1 minute. We also focus on the quick resolution of
-                                tickets to minimise disruption to our customers.</p>
+                            <h3 class="card-title">Forest Spa Retreats</h3>
+                            <p>Experience deep relaxation in pine-covered landscapes.
+                               Enjoy saunas, massage therapy, and mindfulness in nature's lap. 
+                            </p>
                         </div>
                     </div>
                 </li>
@@ -93,10 +93,11 @@
 
                         <img src="assets/images/functional.webp" alt="Man working on laptop.">
                         <div class="card2" id="content2">
-                            <h3 class="card-title">Functional Testing</h3>
-                            <p>The main goal of functional testing is to check how closely the feature is working as per
-                                the specifications. For better understanding, we can divide functional testing goals
-                                into two parts: validation testing and defect testing.</p>
+                            <h3 class="card-title">Thermal & Mineral Baths</h3>
+                            <p>Soak in healing waters known for their skin-rejuvenating 
+                                and detoxifying properties in top-rated Lithuanian spas.
+                                
+                            </p>
                         </div>
                     </div>
                 </li>
@@ -106,10 +107,10 @@
                         <img src="assets/images/non.webp"
                             alt="Wonen standing in front of tower system servers working on laptop">
                         <div class="card3" id="content3">
-                            <h3 class="card-title">Non-Functional Testing</h3>
-                            <p>Non-functional testing helps us identify the risks a product foresees and tells us if it
-                                has poor performance in product or poor performance in production environments these
-                                tests are done in order to obtain information.</p>
+                            <h3 class="card-title">Beauty&Skincare</h3>
+                            <p>From facials to holistic skin treatments using Baltic herbs,
+                               recharge your glow with our expert beauty packages. 
+                            </p>
 
                         </div>
 
