--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
                         <img src="assets/images/functional.webp" alt="Man working on laptop.">
                         <div class="card2" id="content2">
-                            <h3 class="card-title">Thermal & Mineral Baths</h3>
+                            <h3 class="card-title">Thermal Baths</h3>
                             <p>Soak in healing waters known for their skin-rejuvenating 
                                 and detoxifying properties in top-rated Lithuanian spas.
                                 
