--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <nav class="navigation">
             <ul>
                 <li><a href="#top">Home</a></li>
-                <li><a href="#services-list">Services </a></li>
-                <li><a href="#section-needs">About</a></li>
+                <li><a href="#services-list">Gallery</a></li>
+                <li><a href="#section-needs">Retreat Info</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
