--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-    <meta name="description" content="Website By Terence Edward Arnold Lewis, This is the Main landing page.">
-    <title>RMBT</title>
+    <meta name="description" content="Plan your perfect spa retreat in Lithuania. Beauty, relaxation, and peace of mind await at our handpicked resorts.">
+    <title>Lithuania Spa Retreats | RMBT</title>
 </head>
 
 <body>
