--- a/index.html
+++ b/index.html
@@ -140,13 +140,19 @@
             <div class="box">
                 <h2 class="content-title">About US</h2>
                 <p>
-                    RMBT London are one of the 200 managed Microsoft Gold Partners in the UK and renowned as one of the
-                    largest Managed Service Providers in London.
+                    Whether you're planning a weekend escape or a week-long healing journey, 
+                    we take care of every detail — from finding the perfect Lithuanian spa treatments, and tranquil moments.
+                    For the past two years, I've traviled too Lithuina's most peaceful and beautiful getaways that leave lasting memories.
+                    Let us gide you to lithuinas best locations that feed the soule.
+                    Because true relaxation should begin the moment you decide to travel — not after the flight.
                 </p>
             </div>
             <div class="box">
                 <h2 class="content-title">Contact Us</h2>
                 <p>
+                    Let us take the stress out of planning — so you can focus on healing, beauty, and stillness.
+                    We curate wellness retreats to Lithuania’s finest spa destinations, handling every step with care and intention.
+                    From therapeutic treatments to serene settings, every experience is chosen with your wellbeing in mind.
                     Please feel free to get in touch using our contact form or call us on +44 (0)
                     208-never-going-to-get-it or by email at
                     rmbt@gmail.test or get us on our social media links at the bottom of are page.
@@ -164,8 +170,8 @@
     <footer>
         <!--CONTACT INFO-->
         <div class="contact-info">
-            <p><i class="fas fa-mobile-alt"></i> +44 (0) 208-never-going-to-get-it</p>
-            <p><i class="far fa-envelope"></i>RMBT@gmail.test</p>
+            <p><i class="fas fa-mobile-alt"></i>Call or WhatsApp us on: +44 1234 567890</p>
+            <p><i class="far fa-envelope"></i>bookings@rmbttravel.com</p>
         </div>
         <!--SOCIAL MEDIA LINKS-->
         <ul class="social-networks">
