--- a/index.html
+++ b/index.html
@@ -122,15 +122,16 @@
         <!-- Needs section-->
         <section id="section-needs" class="grid">
             <div class="content-wrap">
-                <h2 class="content-title">We manage all your IT needs</h2>
+                <h2 class="content-title">We manage all needs</h2>
                 <p>
-                    Whether you require
-                    fully outsourced business IT support or want to bolster the capabilities of
-                    your internal IT Support team Our specialist service desk can deliver expert, fast and reliable
-                    IT Support services tailored to your business requirements.
-                    Its not by chance, that for the past 3 years we have consistently been awarded for delivering
-                    customer service excellence by Feefo. Our commitment to customer service has been reflected in the
-                    quality and efficiency of our work.
+                   Over the past two years, I’ve travelled across Lithuania, 
+                   exploring its hidden gems—from serene coastal towns like Palanga to the lush forests 
+                   and beautiful beaches of Šventoji tucked away in the countryside.
+                   This journey inspired the creation of a platform that brings together the beauty, 
+                   relaxation, and authentic experiences Lithuania has to offer. 
+                   Whether you're looking for a peaceful retreat, a luxury spa,
+                   or simply want to discover something new,
+                   this site connects you to the most scenic and rejuvenating destinations across the country. 
                 </p>
             </div>
         </section>
